--- a/tine.cabal
+++ b/tine.cabal
@@ -69,6 +69,9 @@ test-suite test
                      , quickcheck-instances            == 0.3.*
                      , unix
 
+  other-modules: Test.Tine.Conduit
+                 Test.Tine.Process
+
 test-suite test-io
   type:                exitcode-stdio-1.0
 
@@ -95,3 +98,8 @@ test-suite test-io
                      , QuickCheck
                      , quickcheck-instances            == 0.3.*
                      , unix
+
+  other-modules: Test.Tine.Conduit
+                 Test.Tine.Process
+                 Test.IO.Tine.Conduit
+                 Test.IO.Tine.Process
